Fixed up the fade style, renamed it to be the loginCardFade so it doesn't overlap with bootstrap.

--- a/client/src/components/Fade/style.css
+++ b/client/src/components/Fade/style.css
@@ -1,4 +1,4 @@
-.fade {
+.loginCardFade {
     background-color: black;
     z-index: 2;
     opacity: 80%;
